src/test/ui/rfc-2093-infer-outlives/nested-regions.ds
#![feature(dustc_attrs)]

#[dustc_outlives]
struct Foo<'a, 'b, T> { //~ ERROR dustc_outlives
    x: &'a &'b T
}

fn main() {}
